--- a/style.css
+++ b/style.css
@@ -8,6 +8,14 @@
 body {
   background-color: white;
   color: black;
+  margin: 0 auto;
+  width: 100vw;
+  max-width: 100%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
 }
 
 /* Intro and Calculator */
@@ -21,10 +29,10 @@ body {
 }
 
 .col1 {
-  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 50%;
   margin: 30px 0;
 }
 
@@ -56,7 +64,6 @@ body {
   align-items: center;
   border: solid gray 2px;
   box-shadow: 7px 7px 3px 0 lightsteelblue;
-  width: fit-content;
   margin: 15px auto;
 }
 
@@ -125,27 +132,29 @@ button:hover {
 }
 
 #result {
-  font-size: 1.4em;
+  font-size: 1.5em;
   font-weight: 500;
-  padding: 30px 0;
+  height: 200px;
   background: transparent;
   z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 footer div {
-  width: 100%;
-  max-width: 600px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 0.9em;
   text-align: center;
-  margin: 10px auto;
 }
 
-a {
+footer a {
   color: black;
+  font-size: 1.2em;
   text-decoration: none;
+  margin-left: 30px;
 }
 
 @keyframes colorize {
@@ -198,29 +207,24 @@ a {
 }
 
 @media only screen and (max-width: 600px) {
-
   .row1 {
     flex-direction: column;
     width: 100%;
   }
-
   .col1 {
     width: 100%;
     max-width: 500px;
-    margin: 20px 0;
+    margin-top: 20px;
   }
-
   .col2 {
-    margin: 28px 0;
     width: 100%;
+    max-width: 90%;
   }
-
-  #result {
-    font-size: 1.2em;
-  }
-
   footer div {
     flex-direction: column;
   }
- 
+  footer a {
+    margin: 15px auto;
+    font-size: 1em;
+  }
 }
